# Test

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  codem8s-test.yml
codem8s/: project.json
native/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
native/dsp/: Effects.cpp  Effects.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  ModMatrix.cpp  ModMatrix.h  Multiband.cpp  Multiband.h  Oscillator.cpp  Oscillator.h  Voice.cpp  Voice.h  Wavetable.cpp  Wavetable.h
native/tests/: TestDSP.cpp  test_dsp.cpp
web/: app.js  index.html  style.css
